[Cleanup] Replace deprecated AllergenListDataItem constructors and Locale test with modern fluent API